<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
	<TextView
		android:id="@+id/points_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Points: 0"/>
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:textAlignment="center"
        android:padding="24dp" />
    <LinearLayout
	    android:id="@+id/tf_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button" />
        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button" />
    </LinearLayout>
	<RelativeLayout
		android:id="@+id/mc_buttons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone">
		<Button
			android:id="@+id/mc_button1"
			android:layout_marginLeft="24dp"
			android:layout_marginRight="24dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		<Button
			android:id="@+id/mc_button2"
			android:layout_marginLeft="24dp"
			android:layout_marginRight="24dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/mc_button1"/>
		<Button
			android:id="@+id/mc_button3"
			android:layout_marginLeft="24dp"
			android:layout_marginRight="24dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/mc_button2"/>
		<Button
			android:id="@+id/mc_button4"
			android:layout_marginLeft="24dp"
			android:layout_marginRight="24dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/mc_button3"/>
	</RelativeLayout>
	<RelativeLayout
		android:id="@+id/fitbLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone">
		<EditText
			android:id="@+id/fitbText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAlignment="center"
			android:hint="@string/submit_button_hint"
			android:inputType="textNoSuggestions|textVisiblePassword" />
		<Button
			android:id="@+id/submit_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/submit_button"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/fitbText"/>
	</RelativeLayout>
	<Button
		android:id="@+id/cheat_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/cheat_button"/>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
		<ImageButton
			android:id="@+id/prev_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/arrow_left" />
	    <ImageButton
	        android:id="@+id/next_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
		    android:src="@drawable/arrow_right" />
	</LinearLayout>
</LinearLayout>


